--- a/antiloop/antiloop.csproj
+++ b/antiloop/antiloop.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{82FEBAC0-8278-4F19-950C-08413BCE9464}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>antiloop</RootNamespace>
+    <RootNamespace>Antiloop</RootNamespace>
     <AssemblyName>antiloop</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
